--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.7.8/semantic.css">
 </head>
 <body>
 <div id="app">Loading...</div>
